# datafusion-go

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  bench_test.go  connection.go  datafusion.go  datafusion_nocgo_test.go  datafusion_test.go  version.go  versions.toml
.github/workflows/: ci.yml  release.yml
examples/arrow/: main.go
examples/parameters/: main.go
examples/simple/: main.go
internal/native/: link_bundled_darwin_amd64.go  link_bundled_darwin_arm64.go  link_bundled_linux_amd64.go  link_bundled_linux_arm64.go  link_bundled_windows_amd64.go  link_shared.go  link_source.go  link_static.go  link_unsupported.go  native.go  native_test.go  version_generated.go
internal/native/lib/: SHA256SUMS
internal/tools/genversions/: main.go
rust/: Cargo.toml
rust/include/: datafusion_go.h
rust/src/: lib.rs
